@@ -18,6 +18,7 @@
  */
 package co.elastic.apm.agent.httpclient.helper;
 
+import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Span;
 import co.elastic.apm.agent.impl.transaction.TextHeaderSetter;
 import co.elastic.apm.agent.objectpool.Allocator;
@@ -28,6 +29,8 @@ import org.apache.http.concurrent.FutureCallback;
 import org.apache.http.nio.protocol.HttpAsyncRequestProducer;
 import org.apache.http.protocol.HttpContext;
 import org.jctools.queues.atomic.AtomicQueueFactory;
+
+import javax.annotation.Nullable;
 
 import static org.jctools.queues.spec.ConcurrentQueueSpec.createBoundedMpmc;
 
@@ -62,8 +65,9 @@ public class ApacheHttpAsyncClientHelper {
         }
     }
 
-    public HttpAsyncRequestProducer wrapRequestProducer(HttpAsyncRequestProducer requestProducer, Span span, TextHeaderSetter<HttpRequest> headerSetter) {
-        return requestProducerWrapperObjectPool.createInstance().with(requestProducer, span, headerSetter);
+    public HttpAsyncRequestProducer wrapRequestProducer(HttpAsyncRequestProducer requestProducer, @Nullable Span span,
+                                                        @Nullable AbstractSpan<?> parent, TextHeaderSetter<HttpRequest> headerSetter) {
+        return requestProducerWrapperObjectPool.createInstance().with(requestProducer, span, parent, headerSetter);
     }
 
     public <T> FutureCallback<T> wrapFutureCallback(FutureCallback<T> futureCallback, HttpContext context, Span span) {
