@@ -61,7 +61,9 @@ public class OkHttpClientAsyncInstrumentation extends AbstractOkHttpClientInstru
         public static Object[] onBeforeEnqueue(final @Advice.Origin Class<? extends Call> clazz,
                                                final @Advice.FieldValue("originalRequest") @Nullable Request originalRequest,
                                                final @Advice.Argument(0) @Nullable Callback originalCallback) {
-            if (tracer.getActive() == null) {
+
+            final AbstractSpan<?> parent = tracer.getActive();
+            if (parent == null) {
                 return null;
             }
 
@@ -69,19 +71,22 @@ public class OkHttpClientAsyncInstrumentation extends AbstractOkHttpClientInstru
                 return null;
             }
 
-            final AbstractSpan<?> parent = tracer.getActive();
-
             Request request = originalRequest;
             Callback callback = originalCallback;
             URL url = request.url();
+
             Span span = HttpClientHelper.startHttpClientSpan(parent, request.method(), url.toString(), url.getProtocol(),
                 OkHttpClientHelper.computeHostName(url.getHost()), url.getPort());
+
+            Request.Builder builder = originalRequest.newBuilder();
             if (span != null) {
                 span.activate();
-                Request.Builder builder = originalRequest.newBuilder();
                 span.propagateTraceContext(builder, OkHttpRequestHeaderSetter.INSTANCE);
                 request = builder.build();
                 callback = CallbackWrapperCreator.INSTANCE.wrap(originalCallback, span);
+            } else {
+                parent.propagateTraceContext(builder, OkHttpRequestHeaderSetter.INSTANCE);
+                request = builder.build();
             }
             return new Object[]{request, callback, span};
         }
